--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 29-08-2025
+  Bugfixes:
+    - Fixed a () vs [] typo
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 29-08-2025
   Features:
