--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.2
+Date: 31-8-2025
+  Bugfixes:
+    - Solved a crash trying to index a non-existing force in storage
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 29-08-2025
   Bugfixes:
